--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,11 @@
-beautifulsoup4==4.9.1
-bottle==0.12.18
-certifi==2020.6.20
-cffi==1.14.0
-chardet==3.0.4
-click==7.1.2
-cryptography==2.9.2
+APScheduler==3.6.3
+certifi==2020.11.8
+cffi==1.14.4
+cryptography==3.2.1
 decorator==4.4.2
-Flask==1.1.2
-GoogleNews==1.4.0
-idna==2.10
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
 pycparser==2.20
-pyRFC3339==1.1
-python-telegram-bot==12.8
-pytz==2020.1
-requests==2.24.0
+python-telegram-bot==13.1
+pytz==2020.4
 six==1.15.0
-soupsieve==2.0.1
-teleport==0.4.0
-tornado==6.0.4
-urllib3==1.25.9
-Werkzeug==1.0.1
+tornado==6.1
+tzlocal==2.1
